--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 <footer class="no-mobile">
 	<p>
+		<b>DESCRIPTION:</b>
+		"This Way!" is a puzzle-like game where you need to get as many coins as you can by directing your jellies through a level filled with arrow plates that throw you in the direction they're pointing at. <br /><br />
+	</p>
+	<p>
 		<b>HOW TO PLAY:</b><br />
 		Get as many coins as you can before you run out of turns!<br />
 		The more tiles you step on, the higher the multiplier!<br />
