--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 </script>
 
 <footer class="no-mobile">
-	<p>
+	<p style="width: 500px;">
 		<b>DESCRIPTION:</b>
-		"This Way!" is a puzzle-like game where you need to get as many coins as you can by directing your jellies through a level filled with arrow plates that throw you in the direction they're pointing at. <br /><br />
+		"This Way!" is a puzzle-like game where you need to get as many coins as you can by directing your jellies through a level filled with arrow plates that throw you in the direction they're pointing at. 
 	</p>
 	<p>
 		<b>HOW TO PLAY:</b><br />
