--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </script>
 
 <footer class="no-mobile">
-	<p style="width: 500px;">
-		<b>DESCRIPTION:</b>
+	<p style="width: 500px; margin: 0 auto;">
+		<b>DESCRIPTION:</b><br />
 		"This Way!" is a puzzle-like game where you need to get as many coins as you can by directing your jellies through a level filled with arrow plates that throw you in the direction they're pointing at. 
 	</p>
 	<p>
