--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
 <footer class="no-mobile">
 	<p style="width: 500px; margin: 0 auto;">
 		<b>DESCRIPTION:</b><br />
-		"This Way!" is a puzzle-like game where you need to get as many coins as you can by directing your jellies through a level filled with arrow plates that throw you in the direction they're pointing at. 
+		Place and step on arrows so they can throw you in the direction they are pointing at. Get coins to earn points!
 	</p>
 	<p>
-		<b>HOW TO PLAY:</b><br />
-		Get as many coins as you can before you run out of turns!<br />
-		The more tiles you step on, the higher the multiplier!<br />
-		Stepping on tile of the other character resets the multiplier!<br />
+		<b>TIPS:</b><br />
+		* Stepping on an arrow increases the multiplier.<br/ >
+		* Picking up a coin cashes in the multiplier.<br/>
 	</p>
 	<p>
-		An LD30 game by AccidentalRebel | <a href="http://www.accidentalrebel.com">AccidentalRebel.com</a>
+		<b>BEWARE:</b><br />
+		* Stepping on tile of the other character resets the multiplier!
+	</p>
+	<p>
+		Code and Art by AccidentalRebel | <a href="http://www.accidentalrebel.com">AccidentalRebel.com</a><br />
+		Music by Jerel Limayo | <a href="https://soundcloud.com/limayojerel/sets/gamemusic"></a>Jerel's Soundcloud</a>
 	</p>
 	<p>Cooked with <a href="http://getflambe.com">Flambe</a></p>
 </footer>
