--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</p>
 	<p>
 		Code and Art by AccidentalRebel | <a href="http://www.accidentalrebel.com">AccidentalRebel.com</a><br />
-		Music by Jerel Limayo | <a href="https://soundcloud.com/limayojerel/sets/gamemusic"></a>Jerel's Soundcloud</a>
+		Music by Jerel Limayo | <a href="https://soundcloud.com/limayojerel/sets/gamemusic">Jerel's Soundcloud</a>
 	</p>
 	<p>Cooked with <a href="http://getflambe.com">Flambe</a></p>
 </footer>
